dbus (1.6.8-1+exp1) UNRELEASED; urgency=low

  * Branch for experimental

 -- Simon McVittie <smcv@debian.org>  Mon, 01 Oct 2012 14:49:32 +0100

dbus (1.6.8-1) unstable; urgency=low

  * Merge from experimental
  * New upstream stable release 1.6.6
    - CVE-2012-3524: avoid arbitrary code execution in setuid or otherwise
      privileged binaries that incorrectly use libdbus without first
      sanitizing the environment variables inherited from their
      less-privileged caller (Closes: #689070)
  * New upstream stable release 1.6.8
    - Revert part of 1.6.6 (do not check filesystem capabilities, only
      setuid/setgid), fixing regressions in certain configurations of
      gnome-keyring

 -- Simon McVittie <smcv@debian.org>  Sat, 29 Sep 2012 13:25:50 +0100

dbus (1.6.4-1) experimental; urgency=low

  * gbp.conf: switch to experimental branch
  * New upstream stable release
    - remove incorrect assertion and have correct default for developer mode
      (Closes: #680027, differently)

 -- Simon McVittie <smcv@debian.org>  Wed, 18 Jul 2012 18:42:52 +0100

dbus (1.6.2-2) unstable; urgency=low

  * Disable "developer mode", which was intended to be off-by-default,
    but was incorrectly on-by-default in 1.6.2, causing an incorrect
    assertion to be hit when starting fcitx before dbus-launch.
    (Closes: #680027)

 -- Simon McVittie <smcv@debian.org>  Tue, 03 Jul 2012 19:33:42 +0100

dbus (1.6.2-1) unstable; urgency=low

  * New upstream stable release
    - dbus-launch --exit-with-session no longer monitors its stdin if
      run under X11 (Closes: #453755)
  * Remove the workaround for #453755 from dbus-Xsession

 -- Simon McVittie <smcv@debian.org>  Wed, 27 Jun 2012 18:22:20 +0100

dbus (1.6.0-1) unstable; urgency=low

  * Merge from "experimental" (1.5.12 was accidentally uploaded to unstable)
  * New upstream stable release
  * debian/watch: only match stable (0.even.x) releases

 -- Simon McVittie <smcv@debian.org>  Tue, 05 Jun 2012 14:23:46 +0100
