@@ -22,6 +22,16 @@ common_configure_flags := \
 		--with-systemdsystemunitdir=/lib/systemd/system \
 		$(NULL)
 
+# libdbus doesn't have --with-valgrind=auto yet. We want to enable it
+# on those architectures where it exists, while only having to modify
+# debian/control when it works on more architectures.
+#
+# We could use --with-valgrind=auto if someone reviewed the patch on
+# <https://bugs.freedesktop.org/show_bug.cgi?id=56925>.
+ifeq (yes,$(shell if pkg-config --exists valgrind; then echo yes; fi))
+maybe_with_valgrind := --with-valgrind
+endif
+
 override_dh_auto_configure:
 	dh_auto_configure \
 		-- \
@@ -40,6 +50,7 @@ override_dh_auto_configure:
 		--enable-checks \
 		--enable-tests \
 		--enable-verbose-mode \
+		${maybe_with_valgrind} \
 		--prefix=/usr/lib/$(DEB_HOST_MULTIARCH)/dbus-1.0/debug-build \
 		--libdir='$${prefix}/lib' \
 		$(NULL)
