@@ -1,6 +1,8 @@
 dbus (1.6.8-1+exp1) UNRELEASED; urgency=low
 
   * Branch for experimental
+  * On architectures where it's currently supported, do the
+    debug build with --with-valgrind for better instrumentation
 
  -- Simon McVittie <smcv@debian.org>  Mon, 01 Oct 2012 14:49:32 +0100
 
